Tests/RunCMake/Instrumentation/bad-hook-stderr.txt
^CMake Error: +
Error: @3,13: Not a valid hook: "bad hook"
  "hooks": \["bad hook", "postGenerate", "preCMakeBuild", "postCMakeBuild", "postInstall"\]
            \^$
